@@ -1,0 +1,14 @@
+# $NetBSD: Makefile,v 1.1 2013/03/05 19:20:20 darcy Exp $
+
+DISTNAME=	recaptcha-client-1.0.6
+PKGNAME=	${PYPKGPREFIX}-recaptcha-1.0.6
+CATEGORIES=	www devel python
+MASTER_SITES=	https://pypi.python.org/packages/source/r/recaptcha-client/
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://cheeseshop.python.org/pypi/recaptcha-client
+COMMENT=	Plugin for reCAPTCHA and reCAPTCHA Mailhide
+LICENSE=    mit
+
+.include "../../lang/python/egg.mk"
+.include "../../mk/bsd.pkg.mk"
