@@ -1,0 +1,17 @@
+@comment $NetBSD: PLIST,v 1.1 2013/03/05 19:20:20 darcy Exp $
+${PYSITELIB}/recaptcha/client/__init__.py
+${PYSITELIB}/recaptcha/client/__init__.pyc
+${PYSITELIB}/recaptcha/client/__init__.pyo
+${PYSITELIB}/recaptcha/client/captcha.py
+${PYSITELIB}/recaptcha/client/captcha.pyc
+${PYSITELIB}/recaptcha/client/captcha.pyo
+${PYSITELIB}/recaptcha/client/mailhide.py
+${PYSITELIB}/recaptcha/client/mailhide.pyc
+${PYSITELIB}/recaptcha/client/mailhide.pyo
+${PYSITELIB}/recaptcha_client-${PKGVERSION}-py2.7-nspkg.pth
+${PYSITELIB}/recaptcha_client-${PKGVERSION}-py2.7.egg-info/PKG-INFO
+${PYSITELIB}/recaptcha_client-${PKGVERSION}-py2.7.egg-info/SOURCES.txt
+${PYSITELIB}/recaptcha_client-${PKGVERSION}-py2.7.egg-info/dependency_links.txt
+${PYSITELIB}/recaptcha_client-${PKGVERSION}-py2.7.egg-info/namespace_packages.txt
+${PYSITELIB}/recaptcha_client-${PKGVERSION}-py2.7.egg-info/requires.txt
+${PYSITELIB}/recaptcha_client-${PKGVERSION}-py2.7.egg-info/top_level.txt
