@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2013,v 1.776 2013/03/05 16:51:54 adam Exp $
+$NetBSD: CHANGES-2013,v 1.777 2013/03/05 19:20:20 darcy Exp $
 
 Changes to the packages collection and infrastructure in 2013:
 
@@ -1112,3 +1112,4 @@ Changes to the packages collection and infrastructure in 2013:
 	Updated devel/p5-PerlIO-via-dynamic to 0.14 [apb 2013-03-05]
 	Updated graphics/ImageMagick to 6.8.3.7 [adam 2013-03-05]
 	Updated graphics/p5-PerlMagick to 6.8.3.7 [adam 2013-03-05]
+	Added www/py-recaptcha version 1.0.6 [darcy 2013-03-05]
